--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -34,6 +34,8 @@ en:
   registrations:
     new:
       title: "Sign up"
+      username: "Username"
+      username_hint: "Alphanumeric characters only"
       email_address: "Email address"
       password: "Password"
       confirm_password: "Confirm password"
