Add basic admin interface for managing users

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -10,6 +10,7 @@ en:
     header:
       home: "Home"
       settings: "Settings"
+      admin: "Admin"
       edit_profile: "Edit Profile"
       change_password: "Change password"
       change_email: "Change email"
@@ -264,6 +265,73 @@ en:
       theme_label: "Theme"
       update:
         theme_updated: "Theme updated successfully"
+
+  admin:
+    title: "Admin"
+    nav:
+      users: "Users"
+    users:
+      index:
+        title: "Users"
+        total_users: "Total: %{count} user"
+        total_users_other: "Total: %{count} users"
+        search: "Search"
+        search_placeholder: "Search by username or email..."
+        filter_by_role: "Filter by Role"
+        filter: "Filter"
+        clear: "Clear"
+        all_roles: "All Roles"
+        role_user: "User"
+        role_admin: "Admin"
+        username: "Username"
+        email: "Email"
+        role: "Role"
+        verified: "Verified"
+        verified_yes: "Yes"
+        verified_no: "No"
+        created_at: "Created At"
+        actions: "Actions"
+        view: "View"
+        edit: "Edit"
+        delete: "Delete"
+        confirm_delete: "Are you sure you want to delete user %{username}? This action cannot be undone."
+        no_users_found: "No users found"
+      show:
+        title: "User Details"
+        back_to_list: "Back to List"
+        edit: "Edit User"
+        delete: "Delete User"
+        confirm_delete: "Are you sure you want to delete user %{username}? This action cannot be undone."
+        user_information: "User Information"
+        username: "Username"
+        email: "Email"
+        role: "Role"
+        verified: "Verified"
+        verified_yes: "Yes"
+        verified_no: "No"
+        created_at: "Created At"
+        updated_at: "Updated At"
+        statistics: "Statistics"
+        active_sessions: "Active Sessions"
+        total_events: "Total Events"
+        recovery_codes: "Recovery Codes"
+        avatar: "Avatar"
+      edit:
+        title: "Edit User"
+        email: "Email Address"
+        username: "Username"
+        role: "Role"
+        role_user: "User"
+        role_admin: "Admin"
+        verified: "Email Verified"
+        verified_hint: "Check this box if the user's email has been verified"
+        cancel: "Cancel"
+        save_changes: "Save Changes"
+      update:
+        user_updated: "User has been updated successfully"
+      destroy:
+        user_deleted: "User has been deleted successfully"
+        cannot_delete_self: "You cannot delete your own account"
 
   common:
     back: "Back"
